<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_select_message"
                    style="@style/HeaderTextViewLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_message" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner"
                    style="@style/SpinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="8dp"
                        app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edit_enter_message_text_input_layout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/edit_enter_message"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:ems="20"
                            android:hint="@string/enter_the_message"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textSize="20sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/saveFloatingActionButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        android:visibility="gone"
                        app:srcCompat = "@drawable/ic_save_black_24dp"/>

                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/price_root"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="8dp"
                        android:columnCount="4"
                        android:rowCount="4"
                        android:useDefaultMargins="true">

                        <TextView
                            style="@style/HeaderTextViewLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_columnSpan="4"
                            android:layout_gravity="center_horizontal"
                            android:layout_row="0"
                            android:text="@string/price_board" />

                        <TextView
                            style="@style/PriceBoardTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="1"
                            android:text="@string/pms" />

                        <TextView
                            style="@style/PriceBoardTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="2"
                            android:text="@string/dpk" />

                        <TextView
                            style="@style/PriceBoardTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_row="3"
                            android:text="@string/ago" />

                        <EditText
                            android:id="@+id/pms_000"
                            style="@style/EditTextStyle000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_row="1"
                            android:hint="@string/zeros_three"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@+id/pms_00" />

                        <EditText
                            android:id="@+id/dpk_000"
                            style="@style/EditTextStyle000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_row="2"
                            android:hint="@string/zeros_three"
                            android:imeOptions="actionNext"

                            android:nextFocusForward="@+id/dpk_00" />

                        <EditText
                            android:id="@+id/ago_000"
                            style="@style/EditTextStyle000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="1"
                            android:layout_row="3"
                            android:hint="@string/zeros_three"
                            android:imeOptions="actionNext"
                            android:nextFocusForward="@+id/ago_00" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_row="1"
                            android:text=":" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_row="2"
                            android:text=":" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="2"
                            android:layout_row="3"
                            android:text=":" />

                        <EditText
                            android:id="@+id/pms_00"
                            style="@style/EditTextStyle00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:layout_row="1"
                            android:hint="@string/zeros"
                            android:imeOptions="actionDone" />

                        <EditText
                            android:id="@+id/dpk_00"
                            style="@style/EditTextStyle00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:layout_row="2"
                            android:hint="@string/zeros"
                            android:imeOptions="actionDone" />

                        <EditText
                            android:id="@+id/ago_00"
                            style="@style/EditTextStyle00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="3"
                            android:layout_row="3"
                            android:hint="@string/zeros"
                            android:imeOptions="actionDone" />

                    </GridLayout>

                </RelativeLayout>


            </LinearLayout>




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerInParent="true"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loading_indicator"
            android:layout_centerInParent="true"
            android:textColor="@color/colorAccent"
            android:text="@string/loading"
            android:visibility="invisible" />

    </RelativeLayout>


</FrameLayout>
