
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <!-- <ImageView
                     android:layout_width="104dp"
                     android:layout_height="104dp"
                     android:layout_gravity="center_horizontal"
                     android:adjustViewBounds="true"
                     android:scaleType="centerCrop"
                     app:srcCompat = "@drawable/ic_flash_on_black_24dp" /> -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/fab_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/test"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tv_select_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_message"
                        style="@style/HeaderTextViewLabel"
                        />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SpinnerStyle"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="8dp"
                            app:srcCompat="@drawable/ic_mode_edit_black_24dp"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/edit_enter_message_text_input_layout"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">
                            <EditText
                                android:id="@+id/edit_enter_message"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_vertical"
                                android:layout_marginRight="16dp"
                                android:layout_marginEnd="16dp"
                                android:hint="@string/enter_the_message"
                                android:imeOptions="actionDone"
                                android:inputType="text"
                                android:textSize="20sp"
                                android:maxLines="1"
                                android:ems="20"/>

                        </android.support.design.widget.TextInputLayout>



                    </LinearLayout>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <GridLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:useDefaultMargins="true"
                        android:layout_margin="8dp"
                        android:columnCount="4"
                        android:rowCount="4">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price_board"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:layout_columnSpan="4"
                            android:layout_gravity="center_horizontal"
                            style="@style/HeaderTextViewLabel"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pms"
                            android:layout_row="1"
                            android:layout_column="0"
                            style="@style/PriceBoardTextView"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dpk"
                            android:layout_row="2"
                            android:layout_column="0"
                            style="@style/PriceBoardTextView"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ago"
                            android:layout_row="3"
                            android:layout_column="0"
                            style="@style/PriceBoardTextView"
                            />

                        <EditText
                            android:id="@+id/pms_000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="1"
                            android:hint="@string/zeros_three"
                            android:nextFocusForward="@+id/pms_00"
                            android:imeOptions="actionNext"
                            style="@style/EditTextStyle000"
                            />

                        <EditText
                            android:id="@+id/dpk_000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="2"
                            android:layout_column="1"
                            android:nextFocusForward="@+id/dpk_00"
                            android:imeOptions="actionNext"
                            android:hint="@string/zeros_three"

                            style="@style/EditTextStyle000"
                            />
                        <EditText
                            android:id="@+id/ago_000"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="3"
                            android:layout_column="1"
                            android:hint="@string/zeros_three"
                            android:nextFocusForward="@+id/ago_00"
                            android:imeOptions="actionNext"
                            style="@style/EditTextStyle000"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="2"
                            android:text=":"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="2"
                            android:layout_column="2"
                            android:text=":"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="3"
                            android:layout_column="2"
                            android:text=":"
                            />

                        <EditText
                            android:id="@+id/pms_00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="1"
                            android:layout_column="3"
                            android:hint="@string/zeros"
                            android:imeOptions="actionDone"
                            style="@style/EditTextStyle00"
                            />
                        <EditText
                            android:id="@+id/dpk_00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="2"
                            android:layout_column="3"
                            android:hint="@string/zeros"
                            android:imeOptions="actionDone"
                            style="@style/EditTextStyle00"
                            />
                        <EditText
                            android:id="@+id/ago_00"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_row="3"
                            android:layout_column="3"
                            android:hint="@string/zeros"
                            android:imeOptions="actionDone"
                            style="@style/EditTextStyle00"
                            />

                    </GridLayout>

                </RelativeLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ProgressBar
                    android:id="@+id/loading_indicator"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_centerInParent="true"
                    android:visibility="invisible"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loading_indicator"
                    android:layout_centerInParent="true"
                    android:text="@string/loading"
                    android:visibility="invisible"
                    />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
